--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,26 @@ body {
 }
 
 /* ヘッダーのスタイル */
-#header {
+header {
     background-color: hsl(353, 85%, 49%);
     color: white;
     padding: 14px 24px;
     text-align: center;
 }
-#footer {
+footer {
     background-color: hsl(353, 85%, 49%);
     color: white;
     padding: 14px 24px;
     text-align: center;
+    list-style: none;
+}
+
+footer a {
+    color: white; /* リンクの文字色を白に設定 */
+}
+
+footer a:hover {
+    text-decoration: underline; /* ホバー時に下線を表示（任意） */
 }
 
 #date-string,
@@ -36,6 +45,9 @@ body {
     border: 3px solid #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     display: block;
+}
+#current-shindo{
+    font-size: 7em !important;
 }
 
 /* コントロールエリアのスタイル */
@@ -66,7 +78,7 @@ body {
 
 /* グラフコンテナのスタイル */
 .graph-container {
-    height: 40vh;
+    height: 50vh;
     margin: 32px 24px 0;
     background: #fff;
     border-radius: 12px;
@@ -77,30 +89,29 @@ body {
 
 .graph-container-shindo {
     height: 30vh;
-    margin: 32px 24px 0;
+    margin: 32px 0px;
     background: #fff;
     border-radius: 12px;
     box-shadow: 0 2px 8px rgba(100, 116, 139, 0.07);
     position: relative;
-    padding: 1.5em 1em;
 }
 
 .graph-container-accel {
     height: 20vh;
-    margin: 32px 24px 0;
+    margin: 32px 10px;
     background: #fff;
     border-radius: 12px;
     box-shadow: 0 2px 8px rgba(100, 116, 139, 0.07);
     position: relative;
-    padding: 1.5em 1em;
-}
-
-/* 隠し要素 */
-.hidden {
-    display: none;
+    /* padding: 1.5em 1em; */
 }
 
 /* 見出しのスタイル */
+h1{
+    color: white;
+    font-size: 20em
+    font-weight: 900;
+}
 h2 {
     color: hsl(353, 85%, 49%);
     font-size: 1.8em;
